Atualizao de Header
Corrigido Icone em todas as páginas

--- a/galeria.html
+++ b/galeria.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <img src="https://i.imgur.com/4byjENo.png" alt="Ícone RosaCorp" class="logo-icon">
+        <div>
+            <h1 style="color:#e60073;">RosaCorp</h1>
         <h1>Galeria</h1>
         <p>Confira nossos eventos recentes.</p>
     </header>
