--- a/servicos.html
+++ b/servicos.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <img src="https://i.imgur.com/4byjENo.png" alt="Ícone RosaCorp" class="logo-icon">
+        <div>
+            <h1 style="color:#e60073;">RosaCorp</h1>
         <h1>Serviços</h1>
         <p>Oferecemos serviços completos para eventos personalizados.</p>
     </header>
