--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <img src="https://i.imgur.com/4byjENo.png" alt="Ícone RosaCorp" class="logo-icon">
+        <div>
+            <h1 style="color:#e60073;">RosaCorp</h1>
         <h1>Sobre Nós</h1>
     </header>
 
